<?xml version="1.0"?>
<package format="3">
  <name>navigation_battery</name>
  <version>0.0.1</version>
  <description>ROS 2 node to feed battery percentage into ROSA KB.</description>

  <maintainer email="you@example.com">Mohamed Msallak</maintainer>
  <license>Apache License 2.0</license>


  <depend>ros_typedb</depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_typedb_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
